--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# ripper-tags
-.tags
-
-# vscode
+# VSCode
 .vscode
 
 # RubyMine
