--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@
 
 # RubyMine
 .idea/
+
+# Webpacker
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
